--- a/03--code/2020-09-15--govt-spending-on-kids/TT-2020-09-15-govt-spending-on-kids.rmd
+++ b/03--code/2020-09-15--govt-spending-on-kids/TT-2020-09-15-govt-spending-on-kids.rmd
@@ -41,7 +41,8 @@ opts_knit$set(
 ```{r other setup}
 # copy tt data from submodule data/ to project data/ folder
 theme_set(theme_classic() +
-            theme(text = element_text(face = "bold")))
+            theme(text = element_text(face = "bold"),
+                  axis.text = element_text(family = "Courier")))
 ```
 
 # Load Data
@@ -153,6 +154,30 @@ kids %>%
        subtitle = "Red line indicates the 2009 global financial crisis",
        x = "Year", 
        y = "Increase in Inflation-adjusted spending per child relative to 1997")
+We could apply a lot of this code to other variables in the dataset.
+
+let's put the common plotting code into a function:
+```{r}
+plot_change_faceted = function(tbl) {
+  tbl %>%
+    # need to add change variable
+    group_by(state, variable) %>%
+    mutate(change = inf_adj_perchild / first(inf_adj_perchild) - 1) %>%
+    ungroup() %>%
+    mutate(state = fct_reorder(state, change, max, .desc = T)) %>%
+    # common code for plotting
+    ggplot(aes(year, change)) + # remove color bc too many samples - replace with facet
+    geom_line() +
+    geom_vline(color = "red", lty = 2, xintercept = 2009) +
+    geom_hline(yintercept = 0, color = "lightgray") +
+    expand_limits(y = 0) +
+    scale_y_continuous(labels = percent, breaks = c(0, 1, 2)) +
+    facet_wrap(~ state) +
+    labs(title = "How has K-12 spending changed per student in each state?",
+         subtitle = "Red line indicates the 2009 global financial crisis",
+         x = "Year", 
+         y = "Increase in Inflation-adjusted spending per child relative to 1997")
+}
 ```
 
 
